# thukiwin

./: CHANGELOG.md  README.md  package.json  settings.html  vite.config.ts  vitest.config.ts
.github/workflows/: pr-backend-tests.yml  release-please.yml
docs/: ROADMAP.md  commands.md  configurations.md
src/: App.css  App.tsx  settings-main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  autostart.rs  commands.rs  computer_control.rs  context.rs  gateway.rs  history.rs  lib.rs  screenshot.rs  settings_commands.rs  tts.rs  windows_activator.rs  windows_focus.rs  windows_screenshot.rs
src-tauri/src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/search/: pipeline.rs
src/__tests__/: App.test.tsx
src/components/: AgentIndicator.tsx  ChatBubble.tsx  CommandSuggestion.tsx  MinibarView.tsx  ModelPicker.tsx  SandboxSetupCard.tsx  SettingsView.tsx  SpeakButton.tsx  Tooltip.tsx  VoiceSelector.tsx  WindowControls.tsx
src/components/__tests__/: AgentIndicator.test.tsx  ChatBubble.test.tsx  MinibarView.test.tsx  SpeakButton.test.tsx  SwitchConfirmation.test.tsx  VoiceSelector.test.tsx
src/config/: commands.ts  tips.ts
src/contexts/: ConfigContext.tsx
src/hooks/: useAgentMode.ts  useOllama.ts
src/hooks/__tests__/: useAgentMode.test.ts  useTts.test.tsx
src/settings/: SettingsWindow.tsx  configHelpers.ts  types.ts
src/settings/components/: index.tsx
src/settings/tabs/: AboutTab.tsx  AgentTab.tsx  DisplayTab.tsx
src/styles/: settings.module.css
src/testUtils/mocks/: tauri-notification.ts  tauri-window.ts  tauri.ts
src/utils/: notification.ts
src/utils/__tests__/: intentDetection.test.ts  notification.test.ts
src/view/: AskBarView.tsx  ConversationView.tsx
src/view/__tests__/: ConversationView.test.tsx
src/view/onboarding/: IntroStep.tsx  PermissionsStep.tsx
src/view/onboarding/__tests__/: IntroStep.test.tsx  PermissionsStep.test.tsx
