[package]
name = "thuki"
version = "0.5.0"
description = "ThukiWin: The context-aware floating secretary for Windows"
authors = ["ayzekhdawy"]
license = "Apache-2.0"
repository = "https://github.com/ayzekhdawy/thukiwin"
homepage = "https://github.com/ayzekhdawy/thukiwin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thuki_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.52.0", features = ["macros", "net", "io-util"] }
futures-util = "0.3.32"
tokio-util = "0.7"
dotenvy = "0.15.7"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
eventsource-stream = "0.2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
sha2 = "0.10"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
core-graphics = "0.25"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_Graphics_Gdi",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Com",
  "Win32_System_Memory",
  "Win32_System_Ole",
] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
